--- a/wallet-connection-app/package.json
+++ b/wallet-connection-app/package.json
@@ -7,14 +7,27 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ansi-html": "^0.0.9",
+    "apexcharts": "^3.53.0",
+    "axios": "^1.7.7",
     "braces": "^3.0.3",
+    "chart.js": "^4.4.4",
     "chokidar": "^4.0.0",
+    "dompurify": "^3.1.6",
     "ethers": "^6.13.2",
+    "igniteui-react-charts": "^18.7.0",
     "joi": "^17.13.3",
     "node-forge": "^1.3.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-sparklines": "^1.7.0",
+    "recharts": "^2.12.7",
+    "sparkline": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-loader": "^9.2.1"
   }
 }
