--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@metamask/detect-provider": "^2.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ansi-html": "^0.0.9",
     "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
+    "bottleneck": "^2.19.5",
     "braces": "^3.0.3",
     "chart.js": "^4.4.4",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "chokidar": "^4.0.0",
     "dompurify": "^3.1.6",
     "ethers": "^6.13.2",
