--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "braces": "^3.0.3",
     "chart.js": "^4.4.4",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-financial": "^0.2.1",
     "chartjs-plugin-zoom": "^2.0.1",
     "chokidar": "^4.0.0",
     "dompurify": "^3.1.6",
