fix css and added NoDataPlaceholder

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_INFURA_PROJECT_ID=61f48b55e37a458695ed48d9fbf56bec
 REACT_APP_COINGECKO_BASE_URL=https://api.coingecko.com/api/v3
+REACT_APP_ETHERSCAN_API_KEY=AM48YUJDDZVUGPKSG59QPD8GDE5T3JYKCQ
 
 # REACT_APP_COVALENT_API_KEY=your_covalent_api_key
