--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "igniteui-react-charts": "^18.7.0",
     "joi": "^17.13.3",
     "node-forge": "^1.3.1",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
