--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "chokidar": "^4.0.0",
     "dompurify": "^3.1.6",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "igniteui-react-charts": "^18.7.0",
     "joi": "^17.13.3",
